tests/baselines/reference/plusOperatorWithBooleanType(strict=true).errors.txt
plusOperatorWithBooleanType.ts(7,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
plusOperatorWithBooleanType.ts(17,24): error TS2454: Variable 'BOOLEAN' is used before being assigned.
plusOperatorWithBooleanType.ts(31,2): error TS2454: Variable 'BOOLEAN' is used before being assigned.
plusOperatorWithBooleanType.ts(33,1): error TS2695: Left side of comma operator is unused and has no side effects.


==== plusOperatorWithBooleanType.ts (4 errors) ====
    // + operator on boolean type
    var BOOLEAN: boolean;
    
    function foo(): boolean { return true; }
    
    class A {
        public a: boolean;
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        static foo() { return false; }
    }
    module M {
        export var n: boolean;
    }
    
    var objA = new A();
    
    // boolean type var
    var ResultIsNumber1 = +BOOLEAN;
                           ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    
    // boolean type literal
    var ResultIsNumber2 = +true;
    var ResultIsNumber3 = +{ x: true, y: false };
    
    // boolean type expressions
    var ResultIsNumber4 = +objA.a;
    var ResultIsNumber5 = +M.n;
    var ResultIsNumber6 = +foo();
    var ResultIsNumber7 = +A.foo();
    
    // miss assignment operators
    +true;
    +BOOLEAN;
     ~~~~~~~
!!! error TS2454: Variable 'BOOLEAN' is used before being assigned.
    +foo();
    +true, false;
    ~~~~~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    +objA.a;
    +M.n;